# vps-backup

./: .gitignore  io.github.ArdaYalinOzkan.VpsBackup.in  io.github.ArdaYalinOzkan.VpsBackup.json  io.github.vpsbackup.VpsBackup.in  io.github.vpsbackup.VpsBackup.json  meson.build  run.sh  vps-backup-launcher.sh  vps-backup.py
data/: io.github.ArdaYalinOzkan.VpsBackup.desktop.in  io.github.ArdaYalinOzkan.VpsBackup.gresource.xml  io.github.ArdaYalinOzkan.VpsBackup.gschema.xml  io.github.ArdaYalinOzkan.VpsBackup.metainfo.xml.in  io.github.vpsbackup.VpsBackup.desktop.in  io.github.vpsbackup.VpsBackup.gschema.xml  io.github.vpsbackup.VpsBackup.metainfo.xml.in  meson.build
po/: POTFILES.in  meson.build
src/: connection.py  main.py  window.py
